--- a/Hangman Challenge.ipynb
+++ b/Hangman Challenge.ipynb
@@ -19,7 +19,7 @@
     "import tkinter as tk\n",
     "from tkinter import messagebox\n",
     "\n",
-    "# Expanded predefined list of words (sample of 500 words)\n",
+    "#  predefined list of words (sample of 500 words)\n",
     "WORDS = [\n",
     "    \"python\", \"hangman\", \"challenge\", \"game\", \"interface\", \"programming\", \"developer\", \"function\", \"variable\", \"apple\",\n",
     "    \"banana\", \"grape\", \"orange\", \"pineapple\", \"strawberry\", \"watermelon\", \"cherry\", \"mango\", \"kiwi\", \"blueberry\",\n",
